cmake_minimum_required(VERSION 3.26)
project(untitled2)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled2 main.cpp
        subtreeOfAnotherTree.cpp
        template.h
        lca_of_bst.cpp
        binary_tree_level_order_traversal.cpp
        count_good_nodes_in_binary_tree.cpp
        binary_tree_right_side_view.cpp
        validate_binary_search_tree.cpp
)
